--- a/ansible/roles/prometheus/files/prometheus.service
+++ b/ansible/roles/prometheus/files/prometheus.service
@@ -1,5 +1,6 @@
 [Unit]
-Description=Prometheus
+Description=Prometheus - systems and service monitoring system
+Documentation=https://github.com/prometheus/prometheus
 After=network.target
 
 [Service]
@@ -8,8 +9,8 @@ User=prometheus
 Group=prometheus
 WorkingDirectory=/opt/prometheus
 ExecStart=/opt/prometheus/prometheus --config.file /opt/prometheus/prometheus.yml
-TimeoutSec=300
-Restart=always
+ExecReload=/bin/kill -HUP $MAINPID
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
