--- a/ansible/roles/prometheus/files/prometheus.yml
+++ b/ansible/roles/prometheus/files/prometheus.yml
@@ -28,6 +28,11 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
 
+  - job_name: node
+    proxy_url: http://192.168.1.24:8080/
+    static_configs:
+      - targets: ['postgres-host:9100', 'postgres-host:9187', 'nginx-host:9100']
+
   - job_name: ec2-discovery
     ec2_sd_configs:
       - region: ap-south-1
