integrated terraform vs ansible. Ansible (prometheus, graphana, alertmanager and thanos) requires additional tuning.

--- a/ansible/installation.yml
+++ b/ansible/installation.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: 
     - prometheus
-  vars_files:
-    - vars/basic.yml
   roles:
     - prometheus
+    - grafana
+    - alertmanager
 ...
